# MstExample

./: CMakeLists.txt  dsu.h  graph.h  image_segmentation.cpp  image_segmentation.h  main.cpp  mst_kruskal.cpp  mst_prim.cpp
